all  working but current session and time

--- a/public/index.html
+++ b/public/index.html
@@ -45,9 +45,12 @@
                     <img class='teacher-pic' src="assets/Brandon.png" alt="brandon pic">
                     <img class='avail' src="assets/pause-button-dark-red-md.png" alt="brandon pic">
                     <img class='avail' src="assets/available-button-green-md.png" alt="brandon pic">
-                    <a href="#" class="btn btn-default btn-circle"><i class="fa fa-step-forward"></i></a>
-                    
-                        <h2 id="textBrandon" class="textBrandon textMonitor">AMITAY</h2>
+                    <div class="next-btn" id="brandon-btn" data-teacher="Brandon">
+                        <a class="btn btn-default btn-circle"><i class="fa fa-step-forward"></i></a>
+                    </div>
+
+
+                    <h2 id="textBrandon" class="textBrandon textMonitor"></h2>
 
                 </div>
                 <div class="col-md-1">
@@ -65,9 +68,12 @@
                     <img class='teacher-pic' src="assets/Hadas.png" alt="hadas pic">
                     <img class='avail' src="assets/pause-button-dark-red-md.png" alt="brandon pic">
                     <!-- <img class='avail'src="assets/available-button-green-md.png" alt="brandon pic" >-->
-                    <a href="#" class="btn btn-default btn-circle"><i class="fa fa-step-forward"></i></a>
-                    
-                        <h2 class="textHadas textMonitor">LANA</h2>
+                    <div class="next-btn" id="hadas-btn" data-teacher="Hadas">
+                        <a class="btn btn-default btn-circle"><i class="fa fa-step-forward"></i></a>
+                    </div>
+
+
+                    <h2 class="textHadas textMonitor"></h2>
 
                 </div>
                 <div class="col-md-1">
@@ -75,36 +81,38 @@
                 </div>
             </div>
 
-                <div class="col-md-1">
-                    <!-- empty -->
-                </div>
-
-                <div id="containerOmer"></div>
-                <div class="col-md-2">
-                    <!-- picture and p/a -->
-                    <img class='teacher-pic' src="assets/Omer.png" alt="omer pic">
-                    <img class='avail' src="assets/pause-button-dark-red-md.png" alt="brandon pic">
-                    <img class='avail' src="assets/available-button-green-md.png" alt="brandon pic">
-                    <a href="#" class="btn btn-default btn-circle"><i class="fa fa-step-forward"></i></a>                    
-                        <h2 class="textOmer textMonitor">SHY</h2>
-                    </div>
-                </div>
-                <div class="col-md-1">
-
-                </div>
+            <div class="col-md-1">
+                <!-- empty -->
             </div>
 
-            <!-- end of row 1 -->
-            <div class="row list">
-                <div class="col-md-1">
-                    <!-- empty -->
-
-
-
-                    <div class="col-md-1">
-                        <!-- empty -->
-                    </div>
+            <div id="containerOmer"></div>
+            <div class="col-md-2">
+                <!-- picture and p/a -->
+                <img class='teacher-pic' src="assets/Omer.png" alt="omer pic">
+                <img class='avail' src="assets/pause-button-dark-red-md.png" alt="brandon pic">
+                <img class='avail' src="assets/available-button-green-md.png" alt="brandon pic">
+                <div class="next-btn" id="omer-btn" data-teacher="Omer">
+                    <a class="btn btn-default btn-circle"><i class="fa fa-step-forward"></i></a>
                 </div>
+                <h2 class="textOmer textMonitor"></h2>
+            </div>
+        </div>
+        <div class="col-md-1">
+
+        </div>
+    </div>
+
+    <!-- end of row 1 -->
+    <div class="row list">
+        <div class="col-md-1">
+            <!-- empty -->
+
+
+
+            <div class="col-md-1">
+                <!-- empty -->
+            </div>
+        </div>
 
         <!-- posts div -->
         <div id="_posts">
