--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,9 @@
                 </div>
 
         <!-- posts div -->
+        <a name='line'></a>
         <div id="_posts">
+            
             <!-- begining of dummy post -->
             <!-- end of dummy post-->
         </div>
@@ -150,6 +152,7 @@
             <div class="col-md-1">
                 <!-- empty -->
             </div>
+            <a name="getinline"></a>
         </div>
         <!-- beg of handlebars -->
         <script id="post-template" type="text/x-handlebars-template">
@@ -168,7 +171,7 @@
                         <!--post-->
                     </div>
                     <div class="col-md-1">
-                        <div class="corner rcorner3">11</div>
+                        <div class="corner rcorner3">{{time}}</div>
                         <!--time-->
                     </div>
                     <div class="col-md-1">
