--- a/public/index.html
+++ b/public/index.html
@@ -142,6 +142,17 @@
                         <li class='student'>Olin</li>
                         <li class='student'>Sarai</li>
                         <li class='student'>Andrea</li>
+                        <li class='student'>Burry</li>
+                        <li class='student'>Lana</li>
+                        <li class='student'>Shy</li>
+                        <li class='student'>Ana</li>
+                        <li class='student'>Yitzchak</li>
+                        <li class='student'>Evgeny</li>
+                        <li class='student'>Avi</li>
+                        <li class='student'>Daniel</li>
+                        <li class='student'>Dan</li>
+                        <li class='student'>Amitay</li>
+                        <li class='student'>Lis</li>
                     </ul>
                 </div>
                     <!-- question box -->
