--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="font-awesome\css\font-awesome.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="dummypost.css">
+    <link rel="stylesheet" href="animate.css">
     <title>getinline</title>
 
 
@@ -23,7 +24,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#getinline" class="smoothScroll">Get inline </a></li>
                         <li><a href="#line" class="smoothScroll">Waiting List</a></li>
-                        <li><a href="#teachers" class="smoothScroll">Consulation</a></li>
+                        <li><a href="#teachers" class="smoothScroll">Consultation</a></li>
                         <img style="/* -webkit-user-select: none; *//* background-position: 0px 0px, 10px 10px; *//* background-size: 20px 20px; *//* background-image:linear-gradient(45deg, #eee 25%, transparent 25%, transparent 75%, #eee 75%, #eee 100%),linear-gradient(45deg, #eee 25%, white 25%, white 75%, #eee 75%, #eee 100%); */cursor: zoom-in;"
                             src="assets/logo.png"
                             width="50" height="50">
@@ -46,7 +47,7 @@
                     <img class='avail pause-btn' id="Brandon-btn-pause" data-teachername="Brandon" src="assets/pause-button-dark-red-md.png">
                     <img class='avail play-btn' id="Brandon-btn-play" data-teachername="Brandon" src="assets/available-button-green-md.png">
                     <div class="next-btn" id="brandon-btn" data-teacher="Brandon">
-                        <a class="btn btn-default btn-circle"><i class="fa fa-step-forward"></i></a>
+                        <a class="btn btn-default btn-circle animated infinite mypulse mywobble"><i class="fa fa-step-forward"></i></a>
                     </div>
 
 
@@ -69,7 +70,7 @@
                     <img class='avail pause-btn' id="Hadas-btn-pause" data-teachername="Hadas" src="assets/pause-button-dark-red-md.png">
                     <img class='avail play-btn' id="Hadas-btn-play" data-teachername="Hadas" src="assets/available-button-green-md.png">
                     <div class="next-btn" id="hadas-btn" data-teacher="Hadas">
-                        <a class="btn btn-default btn-circle"><i class="fa fa-step-forward"></i></a>
+                        <a class="btn btn-default btn-circle animated infinite mypulse mywobble"><i class="fa fa-step-forward"></i></a>
                     </div>
 
 
@@ -92,7 +93,7 @@
                 <img class='avail pause-btn' id="Omer-btn-pause" data-teachername="Omer" src="assets/pause-button-dark-red-md.png">
                 <img class='avail play-btn' id="Omer-btn-play" data-teachername="Omer" src="assets/available-button-green-md.png">
                 <div class="next-btn" id="omer-btn" data-teacher="Omer">
-                    <a class="btn btn-default btn-circle"><i class="fa fa-step-forward"></i></a>
+                    <a class="btn btn-default btn-circle animated infinite mypulse mywobble"><i class="fa fa-step-forward"></i></a>
                 </div>
                 <h2 class="textOmer textMonitor"></h2>
             </div>
