--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="dummypost.css">
     <link rel="stylesheet" href="animate.css">
+    <link rel="stylesheet" href="pretty.css">
     <title>getinline</title>
 
 
@@ -183,7 +184,11 @@
                 <div class="row">
                     <div class="col-md-1">
                         <!--checkbox-->
-                        <!-- <input class="regular-checkbox" id="checkBox" type="checkbox"> -->
+                        <!-- <div class="pretty">
+                            <input type="checkbox"/>
+                            <label><i class="fa fa-close"></i>Check me</label>
+                          </div>
+                        <input class="regular-checkbox pretty" id="checkBox" type="checkbox"> -->
                     </div>
                     <div class="containerList">
                     <div class="col-md-3">
